--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
   font-weight: 400px;
   position: relative;
   top: 0;
-  animation: slide 60s steps(4) infinite;
+  animation: slide 12s steps(4) infinite;
 }
 @keyframes slide {
   100% {
@@ -122,7 +122,7 @@ body {
 
   width: 100%;
   border-left: 2px solid rgb(195, 39, 39);
-  animation: typing 15s steps(29) infinite;
+  animation: typing 3s steps(29) infinite;
 }
 @keyframes typing {
   40%,
@@ -247,7 +247,7 @@ h1 {
   justify-content: space-between;
   /* background-color: black; */
 
-  background-color: rgba(19, 18, 18, 0.9);
+  background-color: rgba(19, 18, 18, 0.8);
   margin-left: 30px;
   margin-right: 30px;
   padding-left: 30px;
@@ -267,7 +267,7 @@ strong {
   font-size: 3em;
   /* background-color: black; */
 
-  background-color: rgba(19, 18, 18, 0.9);
+  background-color: rgba(19, 18, 18, 0.8);
   padding-top: 40px;
   margin-right: 30px;
   margin-left: 30px;
@@ -307,7 +307,7 @@ h4 {
 
   text-align: center;
   font-size: 3em;
-  background-color: rgba(19, 18, 18, 0.9);
+  background-color: rgba(19, 18, 18, 0.8);
   padding: 70px;
   margin-right: 30px;
   margin-left: 30px;
@@ -315,7 +315,7 @@ h4 {
 }
 #ask {
   text-align: center;
-  background-color: rgba(19, 18, 18, 0.9);
+  background-color: rgba(19, 18, 18, 0.8);
   /* background-color: black; */
 
   margin-left: 30px;
@@ -410,6 +410,7 @@ input {
 }
 #back {
   background-color: blanchedalmond;
+  opacity: 0.8;
   text-align: center;
   height: 70px;
   padding-top: 30px;
