--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
   background-size: cover;
   color: white;
   font-family: "poppins";
+  /* background-color: rgba(11, 11, 11, 0.5); */
+  /* opacity: 0.5; */
 }
 /* #cover {
   position: absolute;
@@ -38,14 +40,13 @@ body {
   justify-content: space-between;
   align-items: center;
 
-  border-bottom-style: solid;
-  border-color: white;
+  /* border-bottom-style: solid;
+  border-color: white; */
   border-width: 100%;
-  /* background-color: black; */
-  background-color: rgba(19, 18, 18, 0.9);
+  background-color: black;
+  /* background-color: rgba(19, 18, 18, 0.9); */
 
-  /* margin-left: 30px;
-  margin-right: 30px; */
+  opacity: 0.9;
 }
 #to_bar {
   font-size: 1.5em;
@@ -64,9 +65,11 @@ body {
 }
 .to_bar a:hover {
   color: rgb(245, 11, 11);
-  border-bottom-style: solid;
-  border-color: white;
-  zoom: calc(0.8);
+  border-style: solid;
+  border-color: rgb(245, 11, 11);
+  border-radius: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 #h1 {
   width: 100%;
@@ -180,12 +183,21 @@ body {
   text-align: center;
   overflow: hidden;
 }
-#info {
-  display: flex;
-  align-items: center;
+#cv {
+  /* display: flex; */
+  /* align-items: center; */
   width: 30%;
   text-align: center;
   margin-left: 40px;
+  /* width: 30%; */
+}
+#info {
+  /* display: flex;
+  align-items: center; */
+  width: 100%;
+  text-align: center;
+  display: block;
+  margin-top: 100px;
 }
 #louis img {
   display: inline-block;
@@ -419,4 +431,126 @@ input {
 }
 #back a {
   color: black;
+}
+/* TODO Start */
+
+.content:hover #container {
+  margin-top: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 260px;
+}
+#container {
+  margin-top: 8vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 800px;
+  height: 400px;
+}
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 8%;
+  overflow: hidden;
+  /* width: 100%;
+  height: 260px; */
+}
+
+.content:hover .image img {
+  width: 700px;
+  height: 500px;
+  background-image: url("2 (2).JPG");
+  opacity: 0;
+}
+.content:hover::after {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: url("2 (2).JPG");
+  background-size: cover;
+  width: 700px;
+  height: 500px;
+  content: "";
+  opacity: 0.4;
+}
+
+.image img {
+  width: 400px;
+  height: 450px;
+  object-fit: cover;
+  opacity: 0.8;
+}
+.content:hover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 5%;
+  overflow: hidden;
+}
+
+.me {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: black;
+  opacity: 0.5;
+}
+.profile {
+  color: white;
+  position: absolute;
+  bottom: 50px;
+  left: 50px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.content:hover .profile {
+  transform: translateY(-110px);
+  transition: 2s;
+}
+.content:hover .profil-info {
+  transform: translateY(-130px);
+  transition: 2s;
+  padding-bottom: 30px;
+}
+
+.profil-info {
+  position: absolute;
+  left: 50px;
+  bottom: -120px;
+  font-weight: bold;
+  color: white;
+}
+.profil-inf {
+  font-weight: bold;
+  color: white;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.profil-inf a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+  background-color: rgb(181, 48, 48);
+  opacity: 0.9;
+  padding: 4px;
+
+  border-radius: 5px;
+  margin-top: 30px;
+  margin-left: 40px;
+}
+.profil-inf a:hover {
+  background-color: rgb(136, 67, 67);
 }
