--- a/style.css
+++ b/style.css
@@ -335,6 +335,30 @@ h4 {
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 60px;
+  margin-bottom: 30px;
+  /* padding-bottom: 50px; */
+}
+#submit {
+  color: white;
+  display: flex;
+  justify-content: center;
+  margin-left: 20px;
+  margin-bottom: 80px;
+  margin-top: 10px;
+  margin-left: 22%;
+  border-radius: 5px;
+  background-color: rgb(126, 58, 58);
+  opacity: 0.6;
+}
+#submit:hover {
+  cursor: pointer;
+}
+#submit1:hover {
+  cursor: pointer;
+}
+#submit1 {
+  border-radius: 5px;
+  color: white;
 }
 
 #footer {
@@ -347,10 +371,13 @@ h4 {
   display: flex;
   justify-content: space-between;
   margin-bottom: 0;
+  color: white;
+  background-color: rgb(168, 93, 93);
+  opacity: 0.8;
 
   /* margin-left: 40px;
   margin-right: 40px; */
-  background-image: url("fifa_23_cover.jpeg");
+  /* background-image: url("fifa_23_cover.jpeg"); */
 }
 #first {
   display: inline-block;
@@ -396,11 +423,11 @@ h3 {
   margin-right: 100px;
 }
 textarea {
-  background-color: rgba(213, 147, 94, 0.3);
+  background-color: rgba(213, 147, 94, 0.6);
   border-color: (210, 73, 91, 255);
 }
 input {
-  background-color: rgba(213, 147, 94, 0.3);
+  background-color: rgba(213, 147, 94, 0.6);
   border-color: brown;
   border-width: 0.02em;
 }
@@ -432,7 +459,6 @@ input {
 #back a {
   color: black;
 }
-/* TODO Start */
 
 .content:hover #container {
   margin-top: 20vh;
@@ -450,6 +476,16 @@ input {
   width: 800px;
   height: 400px;
 }
+#what {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
+  opacity: 0.6;
+  z-index: 1;
+}
 .content {
   display: flex;
   justify-content: center;
@@ -465,6 +501,7 @@ input {
   width: 700px;
   height: 500px;
   background-image: url("2 (2).JPG");
+  z-index: -2;
   opacity: 0;
 }
 .content:hover::after {
@@ -478,14 +515,15 @@ input {
   width: 700px;
   height: 500px;
   content: "";
-  opacity: 0.4;
+  opacity: 1;
+  z-index: 0;
 }
 
 .image img {
   width: 400px;
   height: 450px;
   object-fit: cover;
-  opacity: 0.8;
+  /* opacity: 0.8; */
 }
 .content:hover {
   display: flex;
@@ -512,15 +550,18 @@ input {
   left: 50px;
   font-size: 1.5em;
   font-weight: bold;
+  z-index: 1;
 }
 .content:hover .profile {
   transform: translateY(-110px);
   transition: 2s;
+  z-index: 1;
 }
 .content:hover .profil-info {
   transform: translateY(-130px);
   transition: 2s;
   padding-bottom: 30px;
+  z-index: 1;
 }
 
 .profil-info {
@@ -529,6 +570,7 @@ input {
   bottom: -120px;
   font-weight: bold;
   color: white;
+  z-index: 1;
 }
 .profil-inf {
   font-weight: bold;
